fix controllers
